--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -1,4 +1,5 @@
 <kt-toastr #toastr></kt-toastr>
+<kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
 <kt-portlet>
     <!-- PORTLET LOADING | Binded to TABLE Datasource -->
     <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
@@ -106,7 +107,8 @@
                 </ng-container>
                 <ng-container matColumnDef="transactionAmount">
                     <mat-header-cell *matHeaderCellDef>Transaction Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
