--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -133,18 +133,8 @@
                   <div class="row">
                     <div class="col-8">
                       <label>By Status</label>
-                      <ng-select [items]="status" [multiple]="true" bindLabel="statusName" [closeOnSelect]="false"
-                        bindValue="statusId" formControlName="category">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.statusName}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].statusName}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <kt-multi-select-search [items]="statusList" [multiple]="true" bindLabel="statusName"
+                        formControlName="status"></kt-multi-select-search>
                     </div>
                     <div class="col-4">
                       <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
@@ -167,38 +157,18 @@
                   <div class="row">
                     <div class="col-3">
                       <label>By Weight(gm)</label>
-                      <input class="form-control" placeholder="eg-100" formControlName="priceFrom" type="text"
+                      <input class="form-control" placeholder="eg-100" formControlName="weight" type="text"
                         numbersOnly />
                     </div>
                     <div class="col-3">
-                      <label>By tenure(m)</label>
-                      <ng-select [items]="tenure" [multiple]="true" bindLabel="paymentType" [closeOnSelect]="false"
-                        bindValue="paymentTypeId" formControlName="category">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.paymentType}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].paymentType}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <label>By Tenure(m)</label>
+                      <kt-multi-select-search [items]="paymentTypeList" [multiple]="true" bindLabel="paymentType"
+                        formControlName="paymentType"></kt-multi-select-search>
                     </div>
                     <div class="col-4">
                       <label>By Status</label>
-                      <ng-select [items]="status" [multiple]="true" bindLabel="statusName" [closeOnSelect]="false"
-                        bindValue="statusId" formControlName="subCategory">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.statusName}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].statusName}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <kt-multi-select-search [items]="statusList" [multiple]="true" bindLabel="statusName"
+                        formControlName="status"></kt-multi-select-search>
                     </div>
                     <div class="col-2">
                       <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
@@ -218,7 +188,7 @@
             <form [formGroup]="filterForm">
               <div class="form-group kt-form__group row">
                 <div class="col-12 kt-margin-bottom-20-mobile">
-                  <div class="row">
+                  <div class="row pb-3">
                     <div class="col-6">
                       <label>By Payment Recieved Date</label>
                       <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
@@ -226,36 +196,16 @@
                       <mat-datepicker #pickerStartDate></mat-datepicker>
                     </div>
                     <div class="col-6">
-                      <label>By Payment Type</label>
-                      <ng-select [items]="tenure" [multiple]="true" bindLabel="paymentType" [closeOnSelect]="false"
-                        bindValue="paymentTypeId" formControlName="category">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.paymentType}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].paymentType}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <label>By Tenure(m)</label>
+                      <kt-multi-select-search [items]="paymentTypeList" [multiple]="true" bindLabel="paymentType"
+                        formControlName="paymentType"></kt-multi-select-search>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <label>By Order Current Status</label>
-                      <ng-select [items]="status" [multiple]="true" bindLabel="statusName" [closeOnSelect]="false"
-                        bindValue="statusId" formControlName="subCategory">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.statusName}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].statusName}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <label>By Status</label>
+                      <kt-multi-select-search [items]="statusList" [multiple]="true" bindLabel="statusName"
+                        formControlName="status"></kt-multi-select-search>
                     </div>
                     <div class="col-6">
                       <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
@@ -277,19 +227,9 @@
                 <div class="col-12 kt-margin-bottom-20-mobile">
                   <div class="row">
                     <div class="col-5">
-                      <label>By Merchant Name</label>
-                      <ng-select [items]="name" [multiple]="true" bindLabel="merchantName" [closeOnSelect]="false"
-                        bindValue="id" formControlName="category">
-
-                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                            [ngModelOptions]="{ standalone : true }" /> {{item.merchantName}}
-                        </ng-template>
-                        <ng-template ng-multi-label-tmp let-items="items">
-                          {{items[0].merchantName}}&nbsp;
-                          <span *ngIf="items.length > 1">(+{{items.length - 1}})</span>
-                        </ng-template>
-                      </ng-select>
+                      <label>By Merchant</label>
+                      <kt-multi-select-search [items]="merchantList" [multiple]="true" bindLabel="merchantName"
+                        formControlName="merchant"></kt-multi-select-search>
                     </div>
                     <div class="col-4">
                       <label>By Cancel Date</label>
