--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -47,6 +47,61 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Weight -->
+                    <div class="filtered-data" *ngIf="filteredList?.weight">
+                        <div class="filtered-title">By Weight</div>
+                        <div class="d-flex">
+                            <div class="filtered-value">
+                                <span>{{filteredList?.weight}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('weight')">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Date -->
+                    <div class="filtered-data" *ngIf="filteredList?.startDate">
+                        <div class="filtered-title">By Date</div>
+                        <div class="d-flex">
+                            <div class="filtered-value">
+                                <span>{{filteredList?.startDate}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('startDate')">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Merchant -->
+                    <div class="filtered-data" *ngIf="filteredList?.merchant?.length">
+                        <div class="filtered-title">By Merchant</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.merchant; let i = index;">
+                                <span>{{item?.merchantName | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('merchant', i)">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Payment Type -->
+                    <div class="filtered-data" *ngIf="filteredList?.paymentType?.length">
+                        <div class="filtered-title">By Tenure</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.paymentType; let i = index;">
+                                <span>{{item?.paymentType | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('paymentType', i)">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Status -->
+                    <div class="filtered-data" *ngIf="filteredList?.status?.length">
+                        <div class="filtered-title">By Status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.status; let i = index;">
+                                <span>{{item?.statusName | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('status', i)">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </kt-portlet-body>
