--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -1,6 +1,6 @@
 <div class="minHeight">
     <form class="kt-padding-l-45" [formGroup]="finalInterestForm">
-        <div class="row kt-margin-b-20">
+        <div class="row ">
             <div class="col-6 kt-margin-b-20">
                 <div class="row">
                     <div class="col-4 form-label">
