--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -267,6 +267,8 @@
                                     <div class="text-gray font-weight-500 kt-margin-b-5">Karat</div>
                                     <div class="text-color font-weight-500">{{ornaments.karat}}</div>
                                 </div>
+                            </div>
+                            <div class="row kt-margin-t-25">
                                 <div class="col-3">
                                     <div class="text-gray font-weight-500 kt-margin-b-5">Loan Amount </div>
                                     <div class="text-color font-weight-500">{{ornaments.loanAmount}}</div>
